--- a/index.html
+++ b/index.html
@@ -2220,18 +2220,18 @@
                                 <img src="images/logo/logo.png" class="logo" alt="logo">
                             </a>
                         </div>
-                        <!-- <ul class="tf-social-icon style-large">
+                      <ul class="tf-social-icon style-large">
                             <li>
                                 <a href="https://www.facebook.com/" class="social-item social-facebook">
                                     <i class="icon icon-fb"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/" class="social-item social-instagram">
+                                <a href="https://www.instagram.com/luxmenwear/?next=%2F" class="social-item social-instagram">
                                     <i class="icon icon-instagram"></i>
                                 </a>
-                            </li>
-                            <li>
+                            </li> 
+                            <!-- <li>
                                 <a href="https://www.snapchat.com/" class="social-item social-linkedin"><i
                                         class="icon icon-linkedin"></i></a>
                             </li>
@@ -2239,8 +2239,8 @@
                                 <a href="https://x.com/" class="social-item social-x">
                                     <i class="icon icon-x"></i>
                                 </a>
-                            </li>
-                        </ul> -->
+                            </li> -->
+                        </ul> 
                     </div>
                 </div>
             </div>
