--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
                         <!-- item 3 -->
                         <div class="swiper-slide">
                             <div class="wg-cls style-abs hover-img" style="aspect-ratio: 3 / 2; overflow: hidden;">
-                                <a href="product-detail-bow-tie.html" class="image img-style d-block h-100">
+                                <a href="" class="image img-style d-block h-100">
                                     <img src="images/cls-categories/fashion/store3.jpg"
                                         data-src="images/cls-categories/fashion/store3.jpg" alt=""
                                         class="lazyload w-100 h-100" style="object-fit: cover;">
@@ -1307,7 +1307,7 @@
                         <!-- item 4 -->
                         <div class="swiper-slide">
                             <div class="wg-cls style-abs hover-img" style="aspect-ratio: 3 / 2; overflow: hidden;">
-                                <a href="product-detail-kid-suit.html" class="image img-style d-block h-100">
+                                <a href="" class="image img-style d-block h-100">
                                     <img src="images/cls-categories/fashion/store4.jpg"
                                         data-src="images/cls-categories/fashion/store4.jpg" alt=""
                                         class="lazyload w-100 h-100" style="object-fit: cover;">
