--- a/contact-us.html
+++ b/contact-us.html
@@ -1103,7 +1103,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://www.instagram.com/" class="social-item social-instagram">
+                                    <a href="https://www.instagram.com/luxmenwear/?next=%2F" class="social-item social-instagram">
                                         <i class="icon icon-instagram"></i>
                                     </a>
                                 </li>
