--- a/product-detail-kid-suit.html
+++ b/product-detail-kid-suit.html
@@ -57,14 +57,14 @@
                         <ul class="tf-social-icon topbar-left">
                             <li><a href="https://www.facebook.com/" class="social-item social-facebook"><i
                                         class="icon icon-fb"></i></a></li>
-                            <li><a href="https://www.instagram.com/" class="social-item social-instagram"><i
+                            <li><a href="https://www.instagram.com/luxmenwear/?next=%2F" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
                             </li>
-                            <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
+                            <!-- <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
                             </li>
                             <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
                                         class="icon icon-snapchat"></i></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="overflow-hidden">
