--- a/index.html
+++ b/index.html
@@ -1395,8 +1395,8 @@
             <div class="container">
                 <div class="banner-content tf-grid-layout tf-col-2 hover-overlay-2">
                     <div class="image img-hv-overlay">
-                        <img src="images/banner/women-grey-2.jpg" data-src="images/banner/women-grey-2.jpg"
-                            alt="images/banner/women-grey-2.jpg" class="lazyload">
+                        <img src="images/banner/fashion-2.jpg" data-src="images/banner/fashion-2.jpg"
+                            alt="images/banner/fashion-2.jpg" class="lazyload">
                     </div>
                     <div class="box-content ">
                         <div class="box-title-banner wow fadeInUp">
