--- a/shop-default.html
+++ b/shop-default.html
@@ -2201,7 +2201,7 @@
                         </div>
                         <ul class="tf-social-icon style-large">
                             <li>
-                                <a href="https://www.facebook.com/" class="social-item social-facebook">
+                                <a href="https://www.facebook.com/profile.php?id=61576332652776" class="social-item social-facebook">
                                     <i class="icon icon-fb"></i>
                                 </a>
                             </li>
@@ -2210,15 +2210,15 @@
                                     <i class="icon icon-instagram"></i>
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="https://www.snapchat.com/" class="social-item social-linkedin"><i
                                         class="icon icon-linkedin"></i></a>
-                            </li>
-                            <li>
+                            </li> -->
+                            <!-- <li>
                                 <a href="https://x.com/" class="social-item social-x">
                                     <i class="icon icon-x"></i>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
