--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="topbar-wraper">
                     <div class="d-none d-xl-block flex-shrink-0">
                         <ul class="tf-social-icon topbar-left">
-                            <li><a href="https://www.facebook.com/" class="social-item social-facebook"><i
+                            <li><a href="https://www.facebook.com/profile.php?id=61576332652776" class="social-item social-facebook"><i
                                         class="icon icon-fb"></i></a></li>
                             <li><a href="https://www.instagram.com/luxmenwear/?next=%2F/" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
