--- a/shop-collection-list.html
+++ b/shop-collection-list.html
@@ -53,16 +53,16 @@
                 <div class="topbar-wraper">
                     <div class="d-none d-xl-block flex-shrink-0">
                         <ul class="tf-social-icon topbar-left">
-                            <li><a href="https://www.facebook.com/" class="social-item social-facebook"><i
+                            <li><a href="https://www.facebook.com/profile.php?id=61576332652776" class="social-item social-facebook"><i
                                         class="icon icon-fb"></i></a></li>
-                            <li><a href="https://www.instagram.com/" class="social-item social-instagram"><i
+                            <li><a href="https://www.instagram.com/luxmenwear/?next=%2F" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
                             </li>
-                            <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
+                            <!-- <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
                             </li>
                             <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
                                         class="icon icon-snapchat"></i></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="overflow-hidden">
@@ -1232,7 +1232,7 @@
                         </div>
                         <ul class="tf-social-icon style-large">
                             <li>
-                                <a href="https://www.facebook.com/" class="social-item social-facebook">
+                                <a href="https://www.facebook.com/profile.php?id=61576332652776" class="social-item social-facebook">
                                     <i class="icon icon-fb"></i>
                                 </a>
                             </li>
@@ -1241,15 +1241,15 @@
                                     <i class="icon icon-instagram"></i>
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="https://www.snapchat.com/" class="social-item social-linkedin"><i
                                         class="icon icon-linkedin"></i></a>
-                            </li>
-                            <li>
+                            </li> -->
+                            <!-- <li>
                                 <a href="https://x.com/" class="social-item social-x">
                                     <i class="icon icon-x"></i>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
